Guide to adding new sessions to the registry

--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -154,8 +154,10 @@
 
         </nav>
 
-
-        <button class="sessaobutton">+ Sessão</button>
+        <a href="{{url_for('session.session')}}">
+            <button class="sessaobutton">+ Sessão</button>
+        </a>
+        
     </div>
 
 
