--- a/app/templates/newsession.html
+++ b/app/templates/newsession.html
@@ -32,9 +32,9 @@
     </a>
     
     <br> <br>
+    <form method="POST" enctype="multipart/form-data">
     <div>
 
-        <form method="POST" enctype="multipart/form-data">
             <label for="frontal">linha frontal</label>
             <input type="file" name="photo_frontal" id="frontal">
         <br><br>
@@ -50,20 +50,19 @@
         <input type="file" name="photo_coroa" id="coroa">
         <button type="submit">Enviar</button>
 
-    </form>
-
+        
     </div>
-
+    
     <br>
     <div class="details">
         <label for="tratamento">Tratamento atual</label>
-        <select name="" id="tratamento">
+        <select name="formula" id="tratamento">
         <option value="formulaA">Fórmula A</option>
 
-        </select>
-
+    </select>
+    
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, praesentium nostrum. Obcaecati vero voluptatem reiciendis nihil itaque delectus temporibus, tenetur corrupti dolore nobis in voluptas hic deleniti, commodi voluptatum maiores.</p>
-
+    
     </div>
     <br>
     <div>
@@ -75,22 +74,22 @@
                 <legend>Linha frontal</legend>
                 
                 <span>
-                    <input name="frontalr" type="radio" id="frontalop1">
+                    <input name="frontalr"  value="piorando rapidamente"  type="radio" id="frontalop1">
                     <label for="frontalop1">piorando rapidamente</label>
                 </span>
                 
                 <span>
-                    <input name="frontalr" type="radio" id="frontalop2">
+                    <input name="frontalr"value="melhorando lentamente"  type="radio" id="frontalop2">
                     <label for="frontalop2">melhorando lentamente</label>
                 </span>
                 
                 <span>
-                    <input name="frontalr" type="radio" id="frontalop3">
+                    <input required name="frontalr" value="melhorando" type="radio" id="frontalop3">
                     <label for="frontalop3">melhorando</label>
                 </span>
                 
                 <span>
-                    <input name="frontalr" type="radio" id="frontalop4">
+                    <input name="frontalr" value="estável" type="radio" id="frontalop4">
                     <label for="frontalop4">estável</label>
                 </span>
                 
@@ -101,22 +100,22 @@
                 <legend>Entradas</legend>
                 
                 <span>
-                    <input name="entradasr" type="radio" id="entradasop1">
+                    <input name="entradasr"  value="piorando rapidamente"  type="radio" id="entradasop1">
                     <label for="entradasop1">piorando rapidamente</label>
                 </span>
                 
                 <span>
-                    <input name="entradasr" type="radio" id="entradasop2">
+                    <input name="entradasr"  value="melhorando lentamente" type="radio" id="entradasop2">
                     <label for="entradasop2">melhorando lentamente</label>
                 </span>
                 
                 <span>
-                    <input name="entradasr" type="radio" id="entradasop3">
+                    <input required name="entradasr"  value="melhorando" type="radio" id="entradasop3">
                     <label for="entradasop3">melhorando</label>
                 </span>
                 
                 <span>
-                    <input name="entradasr" type="radio" id="entradasop4">
+                    <input name="entradasr" value="estável value="" "  type="radio" id="entradasop4">
                     <label for="entradasop4">estável</label>
                 </span>
                 
@@ -127,50 +126,50 @@
                 <legend>Mid Scalp</legend>
                 
                 <span>
-                    <input name="mid_scalpr" type="radio" id="mid_scalpop1">
+                    <input required name="mid_scalpr" value="piorando rapidamente"  type="radio" id="mid_scalpop1">
                     <label for="mid_scalpop1">piorando rapidamente</label>
                 </span>
                 
                 <span>
-                    <input name="mid_scalpr" type="radio" id="mid_scalpop2">
+                    <input name="mid_scalpr" value="melhorando lentamente"  type="radio" id="mid_scalpop2">
                     <label for="mid_scalpop2">melhorando lentamente</label>
                 </span>
                 
                 <span>
-                    <input name="mid_scalpr" type="radio" id="mid_scalpop3">
+                    <input name="mid_scalpr" value="melhorando"  type="radio" id="mid_scalpop3">
                     <label for="mid_scalpop3">melhorando</label>
                 </span>
                 
                 <span>
-                    <input name="mid_scalpr" type="radio" id="mid_scalpop4">
+                    <input name="mid_scalpr" value="estável"  type="radio" id="mid_scalpop4">
                     <label for="mid_scalpop4">estável</label>
                 </span>
                 
             </fieldset>
 
-
-
+            
+            
             <fieldset>
-
+                
                 <legend>Coroa</legend>
                 
                 <span>
-                    <input name="coroar" type="radio" id="coroap1">
+                    <input name="coroar"  value="piorando rapidamente" type="radio" id="coroap1">
                     <label for="coroap1">piorando rapidamente</label>
                 </span>
                 
                 <span>
-                    <input name="coroar" type="radio" id="coroap2">
+                    <input name="coroar"  value="melhorando lentamente" type="radio" id="coroap2">
                     <label for="coroap2">melhorando lentamente</label>
                 </span>
                 
                 <span>
-                    <input name="coroar" type="radio" id="coroap3">
+                    <input required name="coroar"  value="melhorando" type="radio" id="coroap3">
                     <label for="coroap3">melhorando</label>
                 </span>
                 
-                <span>
-                    <input name="coroar" type="radio" id="coroap4">
+                <span> 
+                    <input name="coroar"  value="estável" type="radio" id="coroap4">
                     <label for="coroap4">estável</label>
                 </span>
                 
@@ -178,14 +177,15 @@
 
             <br>
             <label for="Obs">Obs</label>
-            <textarea name="" id="Obs" rows="5" cols="12" placeholder="Observação"></textarea>
-
-            </div>
-
-        <button>Registrar Sessão</button>        
-
+            <textarea  name="obs" id="Obs" rows="5" cols="12" placeholder="Observação"></textarea>
+            
+        </div>
+        
+        
     </div>
-
-
+    
+    <button type="submit">Registrar Sessão</button>        
+    </form>
+    
 </body>
 </html>
