function to save complete session

--- a/app/templates/newsession.html
+++ b/app/templates/newsession.html
@@ -36,18 +36,18 @@
     <div>
 
             <label for="frontal">linha frontal</label>
-            <input type="file" name="photo_frontal" id="frontal">
+            <input required type="file" name="photo_frontal" id="frontal">
         <br><br>
         <label for="entradas">entradas</label>
-        <input type="file" name="photo_entradas" id="entradas">
+        <input required type="file" name="photo_entradas" id="entradas">
         <br><br>
 
         <label for="mid_scalp">mid_scalp</label>
-        <input type="file" name="photo_midscalp" id="mid_scalp">
+        <input required type="file" name="photo_midscalp" id="mid_scalp">
         <br><br>
 
         <label for="coroa">coroa</label>
-        <input type="file" name="photo_coroa" id="coroa">
+        <input required type="file" name="photo_coroa" id="coroa">
         <button type="submit">Enviar</button>
 
         
@@ -154,7 +154,7 @@
                 <legend>Coroa</legend>
                 
                 <span>
-                    <input name="coroar"  value="piorando rapidamente" type="radio" id="coroap1">
+                    <input required name="coroar"  value="piorando rapidamente" type="radio" id="coroap1">
                     <label for="coroap1">piorando rapidamente</label>
                 </span>
                 
@@ -177,7 +177,7 @@
 
             <br>
             <label for="Obs">Obs</label>
-            <textarea  name="obs" id="Obs" rows="5" cols="12" placeholder="Observação"></textarea>
+            <textarea  name="obs" id="Obs" rows="5" cols="12" placeholder="Observação">.</textarea>
             
         </div>
         
